[CREATE] renew this repository

--- a/Section3.html
+++ b/Section3.html
@@ -24,7 +24,7 @@
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Services</a>
-        <a href="#">Contact</a>
+        <a href="ColorName.html">JIS慣用色名</a>
     </nav>
     <script src="menuButton.js"></script>
 
@@ -55,6 +55,10 @@
                     </li>
                     <li>
                         <a href="#subsec2" class="subsec-item">3-2: 色の視覚効果（配色が持つイメージ）</a>
+                        <ul class="subsubsec">
+                            <li><a href="#subsec2-1">色の対比</a></li>
+                            <li><a href="#subsec2-2">色の同化</a></li>
+                        </ul>
                     </li>
                 </ul>
             </nav>
@@ -93,7 +97,7 @@
             <h5 class="japanese-title-font">軽重感</h5>
             <p>
                 色を見た時に見かけの重さに及ぼす影響のことで、明度が高いと軽く、明度が低いと重く見える。<br>
-                →この先入観のせいで、実際に持ち上げるとこう明度の方が重く感じるかも。<br>
+                →この先入観のせいで、実際に持ち上げると高明度の方が重く感じるかも。<br>
                 軽重感を利用して、低明度の上にこう明度を置くと安定（バランス）して見え、高明度の上に低明度を置くと不安定（アンバランス）に見える。
             </p>
 
@@ -115,7 +119,10 @@
                 時代や人種を超えて共通してイメージされるものと、文化や社会によって違ったイメージをされるものがある。
             </p>
             <p>
-                色の連想において、特に抽象的な概念や感情の連想が広く一般化したものを<em class="keyword">色の象徴性</em>と呼ぶ。
+                色の連想において、特に抽象的な概念や感情の連想が広く一般化したものを<em class="keyword">色の象徴性</em>と呼ぶ。例えばトイレの色（赤が女で青が男）や信号の色（赤が止まれで青が進め）が挙げられる。
+            </p>
+            <p>
+                色の連想の具体的な例は、「<em class="keyword">コーポレートカラー</em>」（赤は活動的、緑は環境に配慮、青は誠実さをイメージ）、「製品の色」（空気清浄機や洗濯機は白色で清潔感を与える）、「商品パッケージ」（黒や金で高級感を出す。原料となる食物の色をイメージカラーとして使う）である。
             </p>
         </section>
 
@@ -129,6 +136,13 @@
                     <em class="keyword">色の同化</em>（図の色が地の色に近づく）の2つである。
                 </p>
             </div>
+
+            <h4 class="japanese-title-font"><a id="subsec2-1">色の対比</a></h4>
+            <p>
+                色の対比とは、空間的あるいは時間的に隣接する2色の差が強調されて見える現象の総称で、空間的に隣接する2色の対比を<em class="keyword">同時対比</em>と言い、時間的に隣接する2色の対比を<em class="keyword">継時対比</em>と言う。また、三属性のどれが強調されるかによって
+            </p>
+
+            <h4 class="japanese-title-font"><a id="subsec2-2">色の同化</a></h4>
         </section>
     </main>
     <script src="scroll.js"></script>
