--- a/ColorName.html
+++ b/ColorName.html
@@ -30,6 +30,8 @@
     <!-- article -->
     <main>
         <h2>JIS慣用色名</h2>
+        <!-- 3級 -->
+        <h3>3級</h3>
         <!-- Japanese -->
         <h3>和名</h3>
         <div class="container">
@@ -301,6 +303,39 @@
                 <div class="item-color"></div>
                 <p class="item-name">チャコールグレイ</p>
             </div>
+        </div>
+
+
+        <!-- 2級 -->
+        <h3>2級</h3>
+        <!-- Japanese -->
+        <h3>和名</h3>
+        <div class="container">
+            <!-- Red type -->
+            <div id="toki" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">鴇色</p>
+            </div>
+            <div id="karakurenai" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">韓紅花</p>
+            </div>
+            <div id="suou" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">蘇芳</p>
+            </div>
+            <div id="tobi" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">鳶色</p>
+            </div>
+            <div id="ebitya" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">海老茶</p>
+            </div>
+            <!-- Yellow type -->
+            <!-- Green type -->
+            <!-- Blue type -->
+            <!-- Purple type -->
         </div>
     </main>
     
