[UPDATE] ColorName:2級和名を追加

--- a/ColorName.html
+++ b/ColorName.html
@@ -332,10 +332,126 @@
                 <div class="item-color"></div>
                 <p class="item-name">海老茶</p>
             </div>
+            <div id="bengara" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">弁柄色</p>
+            </div>
+            <div id="ouni" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">黄丹</p>
+            </div>
+            <div id="hiwada" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">桧皮色</p>
+            </div>
+            <div id="taisya" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">代赭</p>
+            </div>
+            <!-- Yellow type -->
+            <div id="kouzi" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">柑子色</p>
+            </div>
+            <div id="kohaku" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">琥珀色</p>
+            </div>
+            <div id="kutiba" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">朽葉色</p>
+            </div>
+            <div id="ukon" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">鬱金色</p>
+            </div>
+            <div id="kariyasu" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">刈安色</p>
+            </div>
+            <div id="kihada" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">黄檗色</p>
+            </div>
+            <div id="miru" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">海松色</p>
+            </div>
+            <div id="hiwa" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">鶸色</p>
+            </div>
+            <!-- Green type -->
+            <div id="tokiwa" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">常盤色</p>
+            </div>
+            <div id="rokusyou" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">緑青色</p>
+            </div>
+            <div id="tetu" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">鉄色</p>
+            </div>
+            <!-- Blue type -->
+            <div id="sinbasi" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">新橋色</p>
+            </div>
+            <div id="nando" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">納戸色</p>
+            </div>
+            <div id="kamenozoki" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">甕覗き</p>
+            </div>
+            <div id="hanada" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">縹色</p>
+            </div>
+            <!-- Purple type -->
+            <div id="huzi" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">藤色</p>
+            </div>
+            <div id="edomurasaki" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">江戸紫</p>
+            </div>
+            <div id="kodaimurasaki" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">古代紫</p>
+            </div>
+            <!-- Achromatic type -->
+            <div id="ginnezu" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">銀鼠</p>
+            </div>
+            <div id="tyanezumi" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">茶鼠</p>
+            </div>
+            <div id="rikyuunezumi" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">利休鼠</p>
+            </div>
+            <div id="susutake" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">煤竹色</p>
+            </div>
+        </div>
+
+        <!-- English -->
+        <h3>英名</h3>
+        <div class="container">
+            <!-- Red type -->
             <!-- Yellow type -->
             <!-- Green type -->
             <!-- Blue type -->
             <!-- Purple type -->
+            <!-- Achromatic type -->
         </div>
     </main>
     
