[UPDATE] ColorName:2級英名を追加

--- a/ColorName.html
+++ b/ColorName.html
@@ -447,11 +447,139 @@
         <h3>英名</h3>
         <div class="container">
             <!-- Red type -->
+            <div id="rosepink" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">ローズピンク</p>
+            </div>
+            <div id="burgundy" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">バーガンディー</p>
+            </div>
+            <div id="oldrose" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">オールドローズ</p>
+            </div>
+            <div id="poppyred" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">ポピーレッド</p>
+            </div>
+            <div id="maroon" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">マルーン</p>
+            </div>
+            <div id="terracotta" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">テラコッタ</p>
+            </div>
+            <div id="burntsienna" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">バーントシェンナ</p>
+            </div>
+            <div id="rawsienna" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">ローシェンナ</p>
+            </div>
             <!-- Yellow type -->
+            <div id="tan" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">タン</p>
+            </div>
+            <div id="ecrubeige" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">エクルベイジュ</p>
+            </div>
+            <div id="goldenyellow" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">ゴールデンイエロー</p>
+            </div>
+            <div id="amber" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">アンバー</p>
+            </div>
+            <div id="burntamber" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">バーントアンバー</p>
+            </div>
+            <div id="rawamber" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">ローアンバー</p>
+            </div>
+            <div id="naplesyellow" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">ネープルスイエロー</p>
+            </div>
+            <div id="jaunebrillant" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">ジョンブリアン</p>
+            </div>
             <!-- Green type -->
+            <div id="chartreusegreen" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">シャトルーズグリーン</p>
+            </div>
+            <div id="leafgreen" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">リーフグリーン</p>
+            </div>
+            <div id="grassgreen" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">グラスグリーン</p>
+            </div>
+            <div id="applegreen" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">アップルグリーン</p>
+            </div>
+            <div id="mintgreen" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">ミントグリーン</p>
+            </div>
+            <div id="malachitegreen" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">マラカイトグリーン</p>
+            </div>
+            <div id="bottlegreen" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">ボトルグリーン</p>
+            </div>
+            <div id="peacockgreen" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">ピーコックグリーン</p>
+            </div>
             <!-- Blue type -->
+            <div id="nileblue" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">ナイルブルー</p>
+            </div>
+            <div id="ceruleanblue" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">セルリアンブルー</p>
+            </div>
+            <div id="saxeblue" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">サックスブルー</p>
+            </div>
+            <div id="midnightblue" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">ミッドナイトブルー</p>
+            </div>
             <!-- Purple type -->
+            <div id="wistaria" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">ウィスタリア</p>
+            </div>
+            <div id="lilac" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">ライラック</p>
+            </div>
             <!-- Achromatic type -->
+            <div id="slategray" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">スレートグレイ</p>
+            </div>
+            <div id="lampblack" class="item">
+                <div class="item-color"></div>
+                <p class="item-name">ランプブラック</p>
+            </div>
         </div>
     </main>
     
