--- a/Section3.html
+++ b/Section3.html
@@ -13,7 +13,7 @@
 <body>
     <!-- HEADER -->
     <div id="home-button">
-        <a href="#"><img class="logo-home" src="homeIcon1.svg" alt="Home" /></a>
+        <a href="#"><img class="logo-home" src="./img/homeIcon1.svg" alt="Home" /></a>
     </div>
     <div id="menu-button">
         <div id="top-bar"></div>
