[UPDATE] decided grid design

--- a/ColorName.html
+++ b/ColorName.html
@@ -51,7 +51,9 @@
             <!-- Red type -->
             <div id="sakura" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">10RP&nbsp;9/2.5</p>
                 <p class="item-name">桜色</p>
+                <p class="item-ruby">さくらいろ</p>
             </div>
             <div id="sango" class="item third">
                 <div class="item-color"></div>
