[UPDATE] add ruby in Japanese

--- a/ColorName.html
+++ b/ColorName.html
@@ -57,103 +57,141 @@
             </div>
             <div id="sango" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">2.5R&nbsp;7/11</p>
                 <p class="item-name">珊瑚色</p>
+                <p class="item-ruby">さんごいろ</p>
             </div>
             <div id="koubai" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">2.5R&nbsp;6.5/7.5</p>
                 <p class="item-name">紅梅色</p>
-            </div>
-            <div id="shu" class="item third">
-                <div class="item-color"></div>
-                <p class="item-name">朱色</p>
+                <p class="item-ruby">こうばいいろ</p>
             </div>
             <div id="akane" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">4R&nbsp;3.5/11</p>
                 <p class="item-name">茜色</p>
+                <p class="item-ruby">あかねいろ</p>
+            </div>
+            <div id="shu" class="item third">
+                <div class="item-color"></div>
+                <p class="mansell">6R&nbsp;5.5/14</p>
+                <p class="item-name">朱色</p>
+                <p class="item-ruby">しゅいろ</p>
             </div>
             <!-- Yellow type -->
             <div id="rennga" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">10R&nbsp;4/7</p>
                 <p class="item-name">煉瓦色</p>
+                <p class="item-ruby">れんがいろ</p>
             </div>
             <div id="kuri" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">2YR&nbsp;3.5/4</p>
                 <p class="item-name">栗色</p>
+                <p class="item-ruby">くりいろ</p>
             </div>
             <div id="yamabuki" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">10YR&nbsp;7.5/13</p>
                 <p class="item-name">山吹色</p>
+                <p class="item-ruby">やまぶきいろ</p>
             </div>
             <div id="oudo" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">10YR&nbsp;6/7.5</p>
                 <p class="item-name">黄土色</p>
+                <p class="item-ruby">おうどいろ</p>
             </div>
             <div id="karasi" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">3Y&nbsp;7/6</p>
                 <p class="item-name">芥子色</p>
+                <p class="item-ruby">からしいろ</p>
             </div>
             <!-- Green type -->
             <div id="uguisu" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">1GY&nbsp;4.5/3.5</p>
                 <p class="item-name">鶯色</p>
-            </div>
-            <div id="matuba" class="item third">
-                <div class="item-color"></div>
-                <p class="item-name">松葉色</p>
+                <p class="item-ruby">うぐいすいろ</p>
             </div>
             <div id="moegi" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">4GY&nbsp;6.5/9</p>
                 <p class="item-name">萌黄</p>
+                <p class="item-ruby">もえぎ</p>
+            </div>
+            <div id="matuba" class="item third">
+                <div class="item-color"></div>
+                <p class="mansell">7.5GY&nbsp;5/4</p>
+                <p class="item-name">松葉色</p>
+                <p class="item-ruby">まつばいろ</p>
             </div>
             <div id="wakatake" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">6G&nbsp;6/7.5</p>
                 <p class="item-name">若竹色</p>
+                <p class="item-ruby">わかたけいろ</p>
             </div>
             <div id="seizi" class="item third">
                 <div class="item-color"></div>
+                <p class="mansell">7.5G&nbsp;6.5/4</p>
                 <p class="item-name">青磁色</p>
+                <p class="item-ruby">せいじいろ</p>
             </div>
             <!-- Blue type -->
             <div id="asagi" class="item third">
                 <div class="item-color"></div>
                 <p class="item-name">浅葱色</p>
+                <p class="item-ruby">あさぎいろ</p>
             </div>
             <div id="sora" class="item third">
                 <div class="item-color"></div>
                 <p class="item-name">空色</p>
+                <p class="item-ruby">そらいろ</p>
             </div>
             <div id="ai" class="item third">
                 <div class="item-color"></div>
                 <p class="item-name">藍色</p>
+                <p class="item-ruby">あいいろ</p>
             </div>
             <div id="ruri" class="item third">
                 <div class="item-color"></div>
                 <p class="item-name">瑠璃色</p>
+                <p class="item-ruby">るりいろ</p>
             </div>
             <div id="kakitubata" class="item third">
                 <div class="item-color"></div>
                 <p class="item-name">杜若色</p>
+                <p class="item-ruby">かきつばたいろ</p>
             </div>
             <div id="gunjou" class="item third">
                 <div class="item-color"></div>
                 <p class="item-name">群青色</p>
+                <p class="item-ruby">ぐんじょういろ</p>
             </div>
             <div id="kikyou" class="item third">
                 <div class="item-color"></div>
                 <p class="item-name">桔梗色</p>
+                <p class="item-ruby">ききょういろ</p>
             </div>
             <!-- Purple type -->
             <div id="nasukon" class="item third">
                 <div class="item-color"></div>
                 <p class="item-name">茄子紺</p>
+                <p class="item-ruby">なすこん</p>
             </div>
             <div id="ayame" class="item third">
                 <div class="item-color"></div>
                 <p class="item-name">菖蒲色</p>
+                <p class="item-ruby">あやめいろ</p>
             </div>
             <div id="botan" class="item third">
                 <div class="item-color"></div>
                 <p class="item-name">牡丹色</p>
+                <p class="item-ruby">ぼたんいろ</p>
             </div>
         </div>
         
@@ -164,10 +202,12 @@
             <div id="winered" class="item third">
                 <div class="item-color"></div>
                 <p class="item-name">ワインレッド</p>
+                <p class="item-ruby">wine red</p>
             </div>
             <div id="babypink" class="item third">
                 <div class="item-color"></div>
                 <p class="item-name">ベビーピンク</p>
+                <p class="item-ruby">baby pink</p>
             </div>
             <div id="bordeaux" class="item third">
                 <div class="item-color"></div>
@@ -330,131 +370,162 @@
             <div id="toki" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">鴇色</p>
+                <p class="item-ruby">ときいろ</p>
             </div>
             <div id="karakurenai" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">韓紅花</p>
+                <p class="item-ruby">からくれない</p>
             </div>
             <div id="suou" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">蘇芳</p>
+                <p class="item-ruby">すおう</p>
             </div>
             <div id="tobi" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">鳶色</p>
+                <p class="item-ruby">とびいろ</p>
             </div>
             <div id="ebitya" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">海老茶</p>
+                <p class="item-ruby">えびちゃ</p>
             </div>
             <div id="bengara" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">弁柄色</p>
+                <p class="item-ruby">べんがらいろ</p>
             </div>
             <div id="ouni" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">黄丹</p>
+                <p class="item-ruby">おうに</p>
             </div>
             <div id="hiwada" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">桧皮色</p>
+                <p class="item-ruby">ひわだいろ</p>
             </div>
             <div id="taisya" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">代赭</p>
+                <p class="item-ruby">たいしゃ</p>
             </div>
             <!-- Yellow type -->
             <div id="kouzi" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">柑子色</p>
+                <p class="item-ruby">こうじいろ</p>
             </div>
             <div id="kohaku" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">琥珀色</p>
+                <p class="item-ruby">こはくいろ</p>
             </div>
             <div id="kutiba" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">朽葉色</p>
+                <p class="item-ruby">くちばいろ</p>
             </div>
             <div id="ukon" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">鬱金色</p>
+                <p class="item-ruby">うこんいろ</p>
             </div>
             <div id="kariyasu" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">刈安色</p>
+                <p class="item-ruby">かりやすいろ</p>
             </div>
             <div id="kihada" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">黄檗色</p>
+                <p class="item-ruby">きはだいろ</p>
             </div>
             <div id="miru" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">海松色</p>
+                <p class="item-ruby">みるいろ</p>
             </div>
             <div id="hiwa" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">鶸色</p>
+                <p class="item-ruby">ひわいろ</p>
             </div>
             <!-- Green type -->
             <div id="tokiwa" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">常盤色</p>
+                <p class="item-ruby">ときわいろ</p>
             </div>
             <div id="rokusyou" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">緑青色</p>
+                <p class="item-ruby">ろくしょういろ</p>
             </div>
             <div id="tetu" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">鉄色</p>
+                <p class="item-ruby">てついろ</p>
             </div>
             <!-- Blue type -->
             <div id="sinbasi" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">新橋色</p>
+                <p class="item-ruby">しんばしいろ</p>
             </div>
             <div id="nando" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">納戸色</p>
+                <p class="item-ruby">なんどいろ</p>
             </div>
             <div id="kamenozoki" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">甕覗き</p>
+                <p class="item-ruby">かめのぞき</p>
             </div>
             <div id="hanada" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">縹色</p>
+                <p class="item-ruby">はなだいろ</p>
             </div>
             <!-- Purple type -->
             <div id="huzi" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">藤色</p>
+                <p class="item-ruby">ふじいろ</p>
             </div>
             <div id="edomurasaki" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">江戸紫</p>
+                <p class="item-ruby">えどむらさき</p>
             </div>
             <div id="kodaimurasaki" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">古代紫</p>
+                <p class="item-ruby">こだいむらさき</p>
             </div>
             <!-- Achromatic type -->
             <div id="ginnezu" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">銀鼠</p>
+                <p class="item-ruby">ぎんねず</p>
             </div>
             <div id="tyanezumi" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">茶鼠</p>
+                <p class="item-ruby">ちゃねずみ</p>
             </div>
             <div id="rikyuunezumi" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">利休鼠</p>
+                <p class="item-ruby">りきゅうねずみ</p>
             </div>
             <div id="susutake" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">煤竹色</p>
+                <p class="item-ruby">すすたけいろ</p>
             </div>
         </div>
 
@@ -465,6 +536,7 @@
             <div id="rosepink" class="item second">
                 <div class="item-color"></div>
                 <p class="item-name">ローズピンク</p>
+                <p class="item-ruby">rose pink</p>
             </div>
             <div id="burgundy" class="item second">
                 <div class="item-color"></div>
